--- a/geppa-front-end/package.json
+++ b/geppa-front-end/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-email/components": "0.0.15",
+    "@react-email/render": "0.0.12",
     "bootstrap": "^5.3.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
