--- a/geppa-front-end/package.json
+++ b/geppa-front-end/package.json
@@ -14,6 +14,8 @@
     "@react-email/render": "0.0.15",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
